[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/gui/button/small/small_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/gui/icons/home_icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/settings_screen.gd" type="Script" id=3]
[ext_resource path="res://ui/gui/icons/language.png" type="Texture" id=5]
[ext_resource path="res://ui/gui/icons/video_icon.png" type="Texture" id=6]
[ext_resource path="res://ui/gui/icons/audio_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=8]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/video_tab/video_tab.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/audio_tab/audio_tab.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs.gd" type="Script" id=11]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/language_tab/language_tab.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tab_buttons.gd" type="Script" id=13]
[ext_resource path="res://ui/gui/icons/controls_icon.png" type="Texture" id=14]
[ext_resource path="res://ui/gui/icons/storage_icon.png" type="Texture" id=15]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/storage_tab/storage_tab.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/controls_tab/desktop/desktop_controls_tab.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/controls_tab/mobile/mobile_controls_tab.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/controls_tab/mobile/mobile_layout_editor.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/ui/return_shortcut.tres" type="ShortCut" id=20]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -142, -9 )
script = ExtResource( 3 )

[node name="main_settings_container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="elements" type="Control" parent="main_settings_container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="main_container" type="VBoxContainer" parent="main_settings_container/elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -67.5
margin_right = 88.0
margin_bottom = 68.5
custom_constants/separation = 0
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="main_settings_container/elements/main_container"]
margin_right = 176.0
margin_bottom = 2.0
custom_constants/margin_top = 2

[node name="tab_buttons" type="HBoxContainer" parent="main_settings_container/elements/main_container"]
margin_top = 2.0
margin_right = 176.0
margin_bottom = 24.0
alignment = 1
script = ExtResource( 13 )

[node name="video_settings" parent="main_settings_container/elements/main_container/tab_buttons" instance=ExtResource( 1 )]
margin_left = 25.0
margin_right = 47.0
toggle_mode = true
pressed = true
id = "video"

[node name="icon" parent="main_settings_container/elements/main_container/tab_buttons/video_settings/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 6 )

[node name="audio_settings" parent="main_settings_container/elements/main_container/tab_buttons" instance=ExtResource( 1 )]
margin_left = 51.0
margin_right = 73.0
toggle_mode = true
id = "audio"

[node name="icon" parent="main_settings_container/elements/main_container/tab_buttons/audio_settings/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 7 )

[node name="language_settings" parent="main_settings_container/elements/main_container/tab_buttons" instance=ExtResource( 1 )]
margin_left = 77.0
margin_right = 99.0
toggle_mode = true
id = "language"

[node name="icon" parent="main_settings_container/elements/main_container/tab_buttons/language_settings/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 5 )

[node name="control_settings" parent="main_settings_container/elements/main_container/tab_buttons" instance=ExtResource( 1 )]
margin_left = 103.0
margin_right = 125.0
toggle_mode = true
id = "controls"

[node name="icon" parent="main_settings_container/elements/main_container/tab_buttons/control_settings/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 14 )

[node name="storage_settings" parent="main_settings_container/elements/main_container/tab_buttons" instance=ExtResource( 1 )]
margin_left = 129.0
margin_right = 151.0
toggle_mode = true
id = "storage"

[node name="icon" parent="main_settings_container/elements/main_container/tab_buttons/storage_settings/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 15 )

[node name="MarginContainer2" type="MarginContainer" parent="main_settings_container/elements/main_container"]
margin_top = 24.0
margin_right = 176.0
margin_bottom = 34.0
custom_constants/margin_top = 10

[node name="ScrollContainer" type="ScrollContainer" parent="main_settings_container/elements/main_container"]
margin_top = 34.0
margin_right = 176.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3
theme = ExtResource( 8 )
scroll_horizontal_enabled = false

[node name="tabs" type="HBoxContainer" parent="main_settings_container/elements/main_container/ScrollContainer"]
margin_right = 176.0
margin_bottom = 52.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="main_settings_container/elements/main_container/ScrollContainer/tabs"]
margin_left = 18.0
margin_right = 158.0
margin_bottom = 52.0

[node name="MarginContainer" type="MarginContainer" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer"]
margin_right = 140.0

[node name="video_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 140.0
margin_bottom = 48.0

[node name="audio_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 10 )]
visible = false
margin_top = 4.0
margin_right = 130.0
margin_bottom = 144.0

[node name="language_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 140.0
margin_bottom = 158.0

[node name="storage_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 16 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 80.0
margin_bottom = 24.0

[node name="desktop_controls_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 17 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 24.0

[node name="mobile_controls_tab" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer" instance=ExtResource( 18 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 140.0
margin_bottom = 72.0

[node name="ScrollBlock" type="Control" parent="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer"]
margin_top = 52.0
margin_right = 140.0
margin_bottom = 52.0

[node name="MarginContainer3" type="MarginContainer" parent="main_settings_container/elements/main_container"]
margin_top = 104.0
margin_right = 176.0
margin_bottom = 112.0
custom_constants/margin_top = 8

[node name="home_button_container" type="HBoxContainer" parent="main_settings_container/elements/main_container"]
margin_top = 112.0
margin_right = 176.0
margin_bottom = 134.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="main_settings_container/elements/main_container/home_button_container"]
margin_left = 77.0
margin_right = 99.0
margin_bottom = 22.0

[node name="small_button" parent="main_settings_container/elements/main_container/home_button_container/CenterContainer" instance=ExtResource( 1 )]
shortcut_in_tooltip = false
shortcut = ExtResource( 20 )
id = "main_screen"

[node name="icon" parent="main_settings_container/elements/main_container/home_button_container/CenterContainer/small_button/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 2 )

[node name="MarginContainer5" type="MarginContainer" parent="main_settings_container/elements/main_container"]
margin_top = 134.0
margin_right = 176.0
margin_bottom = 136.0
custom_constants/margin_top = 2

[node name="mobile_layout_editor" parent="." instance=ExtResource( 19 )]
visible = false

[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/video_settings" to="main_settings_container/elements/main_container/tab_buttons" method="_on_tab_button_toggled"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/video_settings" to="main_settings_container/elements/main_container/ScrollContainer/tabs" method="_on_tab_button_pressed"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/audio_settings" to="main_settings_container/elements/main_container/tab_buttons" method="_on_tab_button_toggled"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/audio_settings" to="main_settings_container/elements/main_container/ScrollContainer/tabs" method="_on_tab_button_pressed"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/language_settings" to="main_settings_container/elements/main_container/tab_buttons" method="_on_tab_button_toggled"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/language_settings" to="main_settings_container/elements/main_container/ScrollContainer/tabs" method="_on_tab_button_pressed"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/control_settings" to="main_settings_container/elements/main_container/tab_buttons" method="_on_tab_button_toggled"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/control_settings" to="main_settings_container/elements/main_container/ScrollContainer/tabs" method="_on_tab_button_pressed"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/storage_settings" to="main_settings_container/elements/main_container/tab_buttons" method="_on_tab_button_toggled"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/tab_buttons/storage_settings" to="main_settings_container/elements/main_container/ScrollContainer/tabs" method="_on_tab_button_pressed"]
[connection signal="show_layout_editor" from="main_settings_container/elements/main_container/ScrollContainer/tabs/VBoxContainer/mobile_controls_tab" to="." method="_on_show_mobile_layout_editor_request"]
[connection signal="button_pressed" from="main_settings_container/elements/main_container/home_button_container/CenterContainer/small_button" to="." method="_on_button_pressed"]
[connection signal="exited_layout_editor" from="mobile_layout_editor" to="." method="_on_hide_mobile_layout_editor_request"]

[editable path="main_settings_container/elements/main_container/tab_buttons/video_settings"]
[editable path="main_settings_container/elements/main_container/tab_buttons/audio_settings"]
[editable path="main_settings_container/elements/main_container/tab_buttons/language_settings"]
[editable path="main_settings_container/elements/main_container/tab_buttons/control_settings"]
[editable path="main_settings_container/elements/main_container/tab_buttons/storage_settings"]
[editable path="main_settings_container/elements/main_container/home_button_container/CenterContainer/small_button"]
